--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,61 @@
     <title>Inchapin</title>
     <link rel="stylesheet" href="./assets/styles/main.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- region Header -->
+    <header class="header">
+      <div class="container">
+        <div class="header__left">
+          <button class="menu-btn">
+            <span class="menu-btn__icon">
+              <span class="menu-btn__line"></span>
+              <span class="menu-btn__line"></span>
+              <span class="menu-btn__line"></span>
+            </span>
+            Меню
+          </button>
+          <button class="button header__button auto-scroll-text-trigger">
+            <span class="auto-scroll-text-container">
+              <span class="auto-scroll-text">Выбрать квартиру</span>
+            </span>
+            <svg class="button__icon" width="12" height="7" fill="none">
+              <path
+                d="M11.223.865a.41.41 0 0 1 .076.229c0 .101-.026.152-.076.203L5.916 6.629a.41.41 0 0 1-.229.076c-.101 0-.152-.025-.203-.076L.152 1.297c-.05-.05-.076-.102-.076-.203A.41.41 0 0 1 .152.865L.66.357C.71.307.762.281.863.281a.41.41 0 0 1 .229.076l4.595 4.596L10.284.357c.051-.05.127-.076.229-.076.076 0 .152.026.203.076l.508.508z"
+                fill="currentColor"
+              />
+            </svg>
+          </button>
+        </div>
+        <div class="header__logo">
+          <a class="header__logo-link" href="#">
+            <svg
+              class="header__logo-icon"
+              width="187"
+              height="30"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <g clip-path="url(#a)">
+                <mask id="b" x="0" y="0" width="187" height="30">
+                  <path d="M187 0H0v30h187V0z" fill="#fff" />
+                </mask>
+                <g mask="url(#b)" fill="currentColor">
+                  <path
+                    d="M119.405 0c.315 0 .595.294.595.624v2.752c0 .33-.28.624-.595.624h-19.81C99.28 4 99 3.706 99 3.376V.624c0-.33.28-.624.596-.624h19.809zM59.897 24.255a.568.568 0 0 0-.774 0c-1.308 1.03-2.89 1.74-4.767 1.74-3.992 0-6.968-3.244-6.968-7.063 0-3.852 2.96-7.113 6.934-7.113 1.738 0 3.493.676 4.8 1.808.242.236.569.236.775 0L61.79 11.7c.24-.236.24-.608-.035-.861C59.64 8.98 57.368 8 54.22 8 48.007 8 43 12.917 43 19.034 43 25.134 48.007 30 54.236 30c2.77 0 5.455-.946 7.571-2.957.224-.22.275-.608.035-.828l-1.945-1.96zM90.39 8h-2.975a.595.595 0 0 0-.61.591v8.33H76.23v-8.33A.595.595 0 0 0 75.62 8h-3.01c-.323 0-.61.278-.61.591V29.41c0 .313.287.591.61.591h3.01c.36 0 .61-.278.61-.591V20.73h10.576v8.679c0 .313.25.591.61.591h2.975c.322 0 .609-.278.609-.591V8.59c0-.313-.287-.591-.61-.591zM110.267 8.343c-.087-.189-.227-.343-.54-.343h-.314c-.279 0-.436.154-.54.343l-9.81 20.852c-.191.41.07.805.54.805h2.736c.505 0 .784-.308.906-.617l6.185-13.604h.087l6.238 13.604c.227.428.436.617.906.617h2.736c.47 0 .731-.411.54-.805l-9.67-20.852zM135.978 8h-7.387a.586.586 0 0 0-.591.591V29.41c0 .313.243.591.591.591h2.885a.61.61 0 0 0 .591-.591v-7.392h3.928c3.842 0 7.005-3.182 7.005-7.078.017-3.791-3.163-6.939-7.022-6.939zm-.261 10.191h-3.65v-6.33h3.65c1.756 0 3.233 1.322 3.233 3.043 0 1.861-1.477 3.287-3.233 3.287zM155.423 8h-2.847c-.305 0-.576.278-.576.591V29.41c0 .313.271.591.576.591h2.847c.305 0 .576-.278.576-.591V8.59c.017-.313-.271-.591-.576-.591zM186.36 8h-2.95a.59.59 0 0 0-.605.586v12.868h-.035l-10.575-10.887-2.098-2.17a1.337 1.337 0 0 0-.959-.397h-.534a.59.59 0 0 0-.604.586v20.62a.59.59 0 0 0 .604.586h2.933a.59.59 0 0 0 .604-.586V15.821h.036l.035.034 12.904 13.73s.391.414.746.414c.516 0 1.138.052 1.138-.569V8.586a.647.647 0 0 0-.64-.586zM3.423 8H.576C.271 8 0 8.278 0 8.591V29.41c0 .313.271.591.576.591h2.847c.305 0 .576-.278.576-.591V8.59C4.016 8.278 3.728 8 3.423 8zM34.36 8h-2.95a.59.59 0 0 0-.605.586v12.868h-.035L20.195 10.567l-2.098-2.17A1.337 1.337 0 0 0 17.138 8h-.534a.59.59 0 0 0-.604.586v20.62a.59.59 0 0 0 .604.586h2.933a.59.59 0 0 0 .604-.586V15.821h.036l.035.034 12.904 13.73s.391.414.746.414c.516 0 1.138.052 1.138-.569V8.586A.647.647 0 0 0 34.36 8z"
+                  />
+                </g>
+              </g>
+            </svg>
+          </a>
+        </div>
+        <div class="header__right">
+          <a href="tel:+74955272121" class="phone-link">+7 495 527 21 21</a>
+          <button class="callback-button">Заказать звонок</button>
+        </div>
+      </div>
+    </header>
+    <!-- endregion -->
+
+    <script src="./assets/scripts/index.js"></script>
+  </body>
 </html>
