--- a/src/index.html
+++ b/src/index.html
@@ -94,13 +94,111 @@
         </picture>
         <div class="banner__row">
           <h3 class="banner__title">
-            Дом бизнес-класса<br />Для ценителей роскоши
+            Дом бизнес-класса
+            <br />
+            Для ценителей роскоши
           </h3>
           <img
             class="banner__logo"
             src="./assets/images/logo-black.svg"
             alt="Inchapin"
           />
+        </div>
+      </div>
+    </section>
+    <!-- endregion -->
+
+    <!-- region About -->
+    <section class="about">
+      <div class="container">
+        <div class="about__left">
+          <p class="about__label">О проекте</p>
+          <div class="about__picture-wrapper">
+            <div class="about__picture-plug">
+              <svg
+                class="about__picture-icon"
+                width="49"
+                height="68"
+                viewBox="0 0 49 68"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M47.6105 0C48.3461 0 49 0.623853 49 1.32569V7.17431C49 7.87615 48.3461 8.5 47.6105 8.5H1.38949C0.653876 8.5 0 7.87615 0 7.17431V1.32569C0 0.623853 0.653876 0 1.38949 0H47.6105Z"
+                  fill="currentColor"
+                />
+                <path
+                  d="M26.2888 18.5551C26.0855 18.1248 25.7603 17.7727 25.0285 17.7727H24.2967C23.6463 17.7727 23.2804 18.1248 23.0364 18.5551L0.147809 66.1615C-0.299393 67.1003 0.31043 68 1.40811 68H7.79091C8.96989 68 9.62036 67.2959 9.90495 66.5918L24.3374 35.5322H24.5407L39.0951 66.5918C39.6236 67.5697 40.1114 68 41.2091 68H47.5919C48.6896 68 49.2994 67.0612 48.8522 66.1615L26.2888 18.5551Z"
+                  fill="currentColor"
+                />
+              </svg>
+            </div>
+            <picture class="about__picture">
+              <source
+                media="(min-width: 1770px)"
+                srcset="./assets/images/about/about-1920.webp"
+              />
+              <source
+                media="(min-width: 1281px)"
+                srcset="./assets/images/about/about-1440.webp"
+              />
+              <source
+                media="(min-width: 768px)"
+                srcset="./assets/images/about/about-1024.webp"
+              />
+              <source
+                media="(min-width: 360px)"
+                srcset="./assets/images/about/about-768.webp"
+              />
+              <img
+                src="./assets/images/about/about-360.webp"
+                alt="О проекте"
+                class="about__img"
+                loading="lazy"
+              />
+            </picture>
+          </div>
+        </div>
+        <div class="about__right">
+          <p class="about__title">
+            Уютное и безопасное пространство для счастливой,
+            <br />
+            <span class="text--primary">Спокойной и размеренной жизни</span>
+          </p>
+          <p class="about__description">
+            <span class="text--primary">
+              Квартиры от 65 до 356 м <sup>2</sup> с чистовой отделкой</span
+            >, балконами, лоджиями и террасами В собственной закрытой охраняемой
+            территории.
+          </p>
+          <div class="about__video">
+            <div class="video__info">
+              <p class="video__label">Видео о проекте</p>
+              <p class="video__time">1:25 минут</p>
+            </div>
+            <div class="video__line"></div>
+            <button class="video__button">
+              <span class="play play--white video__play">
+                <svg
+                  class="play__icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="9"
+                  height="10"
+                >
+                  <path
+                    fill="currentColor"
+                    d="M8.407 4.124a1 1 0 0 1 0 1.752L1.482 9.685A1 1 0 0 1 0 8.809V1.19A1 1 0 0 1 1.482.315l6.925 3.809Z"
+                  />
+                </svg>
+                Play
+              </span>
+              <img
+                src="./assets/images/video-cover.webp"
+                alt="Видео о проекте"
+                class="video__cover"
+              />
+            </button>
+          </div>
         </div>
       </div>
     </section>
