ADD: 767 PX responsive

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
                 <span class="menu-btn__line"></span>
                 <span class="menu-btn__line"></span>
               </span>
-              Меню
+              <span class="menu-btn__text">Меню</span>
             </button>
             <button class="button header__button auto-scroll-text-trigger">
               <span class="auto-scroll-text-container">
